--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -55,12 +55,13 @@
 						<p style="color:#8F8F8F; padding:3px; font-weight:bold; font-style:italic;">Enable/disable live chat buddy</p>
 					</ion-item>
 
-					<ion-item ng-click="panel(1)" id="settings">
+					<ion-item ng-click="panel(1)" id="settings" class="panels">
 						<div class="avatar-icon-placeholder"></div>Settings Access
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item> -->
 
-					<ion-item ng-click="panel(6)" id="aboutMe">
+					{{step}}
+					<ion-item ng-click="panel(6, 'aboutMe')" class="panels" ng-class="{active: 6 == step}">
 						<div class="avatar-icon-placeholder">
 							<img src="img/AAC_assets/icon-aboutme.png" />
 						</div>About Me Profile
@@ -71,21 +72,21 @@
 				<ion-list>
 					<div class="item item-divider"><strong>Interface</strong></div>
 
-					<ion-item ng-click="panel(2)" id="synthetic">
+					<ion-item ng-click="panel(2)" class="panels" ng-class="{active: 2 == step}">
 						<div class="avatar-icon-placeholder">
 							<img src="img/AAC_assets/icon-synthetic-voice.png" />
 						</div>Synthetic Voice
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<ion-item ng-click="panel(11)" id="synthetic">
+					<ion-item ng-click="panel(11, 'download')" class="panels" ng-class="{active: 11 == step}">
 						<div class="avatar-icon-placeholder">
 							<img src="img/AAC_assets/icon-synthetic-voice.png" />
 						</div>Download board
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<!-- <ion-item ng-click="panel(3)" id="sound">
+					<!-- <ion-item ng-click="panel(3)" id="sound" class="panels">
 						<div class="avatar-icon-placeholder"></div>Sound Effects
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -100,7 +101,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="panel(4)" id="phrase">
+					<ion-item ng-click="panel(4)" id="phrase" class="panels">
 						<div class="avatar-icon-placeholder"></div>Phrase Bar
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item> -->
@@ -119,7 +120,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="panel(5)" id="alternate">
+					<ion-item ng-click="panel(5)" id="alternate" class="panels">
 						<div class="avatar-icon-placeholder"></div>Alternate Home Page
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
