--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -55,13 +55,12 @@
 						<p style="color:#8F8F8F; padding:3px; font-weight:bold; font-style:italic;">Enable/disable live chat buddy</p>
 					</ion-item>
 
-					<ion-item ng-click="panel(1)" id="settings" class="panels">
+					<ion-item ng-click="panel(1)" class="panels" ng-class="{active: 1 == step}">
 						<div class="avatar-icon-placeholder"></div>Settings Access
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item> -->
 
-					{{step}}
-					<ion-item ng-click="panel(6, 'aboutMe')" class="panels" ng-class="{active: 6 == step}">
+					<ion-item ng-click="panel(6)" class="panels" ng-class="{active: 6 == step}">
 						<div class="avatar-icon-placeholder">
 							<img src="img/AAC_assets/icon-aboutme.png" />
 						</div>About Me Profile
@@ -86,7 +85,7 @@
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
-					<!-- <ion-item ng-click="panel(3)" id="sound" class="panels">
+					<!-- <ion-item ng-click="panel(3)" class="panels" ng-class="{active: 3 == step}">
 						<div class="avatar-icon-placeholder"></div>Sound Effects
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
@@ -101,7 +100,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="panel(4)" id="phrase" class="panels">
+					<ion-item ng-click="panel(4)" class="panels" ng-class="{active: 4 == step}">
 						<div class="avatar-icon-placeholder"></div>Phrase Bar
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item> -->
@@ -120,7 +119,7 @@
 						</label>
 					</ion-item>
 
-					<ion-item ng-click="panel(5)" id="alternate" class="panels">
+					<ion-item ng-click="panel(5)" class="panels" ng-class="{active: 5 == step}">
 						<div class="avatar-icon-placeholder"></div>Alternate Home Page
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
