--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -114,7 +114,7 @@
               <span ng-repeat="row in rows">
                 <div class="tile" ng-repeat="col in columns"
                   ng-click="clickTile(board.symbols[col+row]); sayWord();"
-                  ng-class="{ lightYellow: board.symbols[col+row].word_class=='pronoun', lightBlue: board.symbols[col+row]==selectedIndex }";>
+                  ng-class="{ lightYellow: board.symbols[col+row].word_class.indexOf('pronoun') > -1, lightBlue: board.symbols[col+row]==selectedIndex }";>
                   <span ng-show="filled_tiles.symbols.indexOf(col+row)!=-1">
                     <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}</p>
                     <br>
