--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -1,15 +1,16 @@
 <ion-header-bar class="bar-dark">
   <div class="buttonsdiv">
-    <i class="icon ion-unlocked"></i>
+    <!--<i class="icon ion-unlocked"></i>-->
     <!-- <i class="icon ion-locked"></i> -->
     <button class="button button-outline button-calm button-small" id="selected-btn">
       <a href="/#/settings"><i class="icon ion-gear-b"></i> Settings</a>
     </button>
+	<!--
     <button class="button button-outline button-calm button-small" id="btn-styling">
       <i class="icon ion-grid"></i><a href="#/board_factory">Board Factory</a>
       <br>
       <p class="show-hide-label">*Requires Wifi</p>
-    </button>
+    </button>-->
     <button class="button button-outline button-calm button-small" id="btn-styling" style="margin-right:10px;">
       <!-- <i class="icon ion-eye-disabled"></i>  -->
       <i class="icon ion-eye-disabled"></i><span class="hide-label">Hide Tiles</span>
