Added removed yellow tile code for pronoun.

--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -669,6 +669,10 @@ input[type="text"]:focus, textarea:focus {
   background-color: #83EFF0;
   border-color: white; }
 
+.tile.lightYellow {
+  background-color: #FFEFAD;
+  border-color: #979797 }
+
 .title-section, .symbol-section, .tag-section {
   padding-bottom: 20px; }
 
