--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -656,16 +656,12 @@ input[type="text"]:focus, textarea:focus {
   background-color: #000; }
 
 .tile.lightBlue {
-  background-color: #83EFF0;
-  border-color: white; }
-
-.tile.lightBlue {
-  background-color: #83EFF0;
-  border-color: white; }
+  background-color: #83EFF0!important;
+  border-color: white!important;}
 
 .lightBlue {
-  background-color: #83EFF0;
-  border-color: white; }
+  background-color: #83EFF0!important;
+  border-color: white!important; }
 
 .tile.lightYellow {
   background-color: #FFEFAD;
