Fixed css problem and changes to the voices.

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -611,12 +611,11 @@ input[type="text"]:focus, textarea:focus{
   }
 }
 
-.tile-words{
+.tile-words {
   line-height: 100%;
   letter-spacing: .5px;
-  margin-bottom: -16px;
-  margin-top:2px;
-}
+  margin-bottom: 8px;
+  margin-top: 2px; }
 
 .list-container{
   float:right;
