Css changes and changes to the synthetic voices settings (now working).

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -929,6 +929,16 @@ input[type="text"]:focus, textarea:focus{
   font-size:50%;
 }
 
+.panels{
+  background-color: white;
+  color: black;
+}
+
+.panels.active{
+  background-color: #008485!important;
+  color: white;
+}
+
 .triangle-topright {
   width: 0;
   height: 0;
