--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -172,9 +172,8 @@
 					<div class="settings-box">
 						<p>Synthetic Voices</p>
 						<ion-list>
-							<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="VICKI"><span class="checkbox-text">Vicki</span><i class="icon ion-play"></i></ion-radio>
-							<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="ALEX"><span class="checkbox-text">Alex</span><i class="icon ion-play"></i></ion-radio>
-							<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="VICTORIA"><span class="checkbox-text">Victoria</span><i class="icon ion-play"></i></ion-radio>
+							<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="FEMALE"><span class="checkbox-text">Female</span><i class="icon ion-play"></i></ion-radio>
+							<ion-radio type="radio" style="border-color:white;" ng-model="user.userinfo.synthetic_voice" value="MALE"><span class="checkbox-text">Male</span><i class="icon ion-play"></i></ion-radio>
 						</ion-list>
 					</div>
 
@@ -182,7 +181,7 @@
 						<p>Voice Speed</p>
 						<div class="item range" style="border-color:white;">
 							<div class="avatar-icon-placeholder"></div>
-							<input type="range" name="synth-speed" min="0" max="100" value="{{ user.userinfo.voice_speed }}" ng-model="user.userinfo.voice_speed">
+							<input type="range" name="synth-speed" min="0" max="150" value="{{ user.userinfo.voice_speed }}" ng-model="user.userinfo.voice_speed">
 							<div class="avatar-icon-placeholder"></div>
 						</div>
 					</div>
