--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -7,8 +7,7 @@
       <i class="icon ion-gear-b"></i> Settings
     </a>
 
-    <!--
-    <a href="#/board_factory" class="button button-outline button-small" id="btn-styling">
+    <!-- <a href="#/board_factory" class="button button-outline button-small" id="btn-styling">
       <i class="icon ion-grid"></i>
       Board Factory
       <br>
@@ -18,12 +17,14 @@
     <button class="button button-outline button-calm button-small" id="btn-styling" ng-click="activeHide()" ng-class="class1">
       <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == true"></i>
       <i class="icon ion-eye-disabled" ng-show="selectedBtn2 == false" style="color:white;"></i>
+
       <span class="hide-label" ng-show="selectedBtn2 == true">Hide Tiles</span>
+
       <span class="hide-label2" ng-show="selectedBtn2 == false">Hide Tiles</span>
 
       <div class="toggle-content" style="float:right">
         <label class="toggle toggle-dark-green toggle-small" ng-if="hide">
-          <input type="checkbox">
+          <input type="checkbox" ng-change="enableItems();" ng-model="toggleTiles">
           <div class="track" id="track-color">
             <div class="handle" id="handle-color"></div>
           </div>
@@ -42,7 +43,13 @@
     <div class="row" id="regularRow">
       <div class="col col-10" id="regularRowBod">
 
-        <div ng-click="sayPhrase()">
+        <div ng-click="sayPhrase()" ng-show="!activeChat">
+          <img src="img/AAC_assets/avatar_default.png"/>
+          <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
+          <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
+        </div>
+
+        <div ng-click="callBuddy()" ng-show="activeChat">
           <img src="img/AAC_assets/avatar_default.png"/>
           <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
           <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
@@ -55,37 +62,118 @@
           {{ phrase }}
         </div>
 
-         <div class="regulars" ng-click="chosenTile(quickbar.lexeme);">
-            {{ quickbar.lexeme.lexeme | charLimit: titleLimit }}
+        <div ng-show="selectedBtn2">
+
+          <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme.hidden}">
+            <div ng-show="!quickbar.lexeme.hidden"
+              ng-click="chosenTile(quickbar.lexeme); sayWord();">
+              {{ quickbar.lexeme.lexeme | limitTo: titleLimit }}
+              <br />
+              <img  ng-src="{{quickbar.lexeme.symbol.image}}"
+              ng-if="quickbar.lexeme.symbol.image"
+              style="width:40px;height:40px">
+            </div>
+          </div>
+
+          <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme2.hidden}">
+            <div ng-show="!quickbar.lexeme2.hidden"
+                 ng-click="chosenTile(quickbar.lexeme2); sayWord();">
+
+                  {{ quickbar.lexeme2.lexeme | limitTo: titleLimit }}
+                  <br />
+                  <img ng-src="{{quickbar.lexeme2.symbol.image}}"
+                    ng-if="quickbar.lexeme2.symbol.image"
+                    style="width:40px;height:40px">
+            </div>
+          </div>
+
+          <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme3.hidden}">
+            <div ng-show="!quickbar.lexeme3.hidden"
+                 ng-click="chosenTile(quickbar.lexeme3); sayWord();">
+
+                  {{ quickbar.lexeme3.lexeme | limitTo: titleLimit }}
+                  <br />
+                  <img ng-src = "{{quickbar.lexeme3.symbol.image}}"
+                    ng-if="quickbar.lexeme3.symbol.image"
+                    style="width:40px;height:40px">
+            </div>
+          </div>
+
+          <div class="regulars" ng-class="{'hide-tile': quickbar.lexeme4.hidden}">
+            <div ng-show="!quickbar.lexeme4.hidden"
+              ng-click="chosenTile(quickbar.lexeme4); sayWord();">
+                {{ quickbar.lexeme4.lexeme | limitTo: titleLimit }}
+                <img ng-src="{{quickbar.lexeme4.symbol.image}}"
+                  ng-if="quickbar.lexeme4.symbol.image"
+                  style="width:40px;height:40px">
+            </div>
+          </div>
+        </div>
+
+        <div ng-show="!selectedBtn2">
+
+          <div class="regulars"
+            ng-click="hideRegular(quickbar.lexeme.pk);"
+            ng-class="{'item-dark': quickbar.lexeme.hidden}">
+
+            <span class="fa fa-eye item-eye" aria-hidden="true"
+              ng-class="{'eye-red': !quickbar.lexeme.hidden, 'eye-green': quickbar.lexeme.hidden}">
+            </span>
+
+            {{ quickbar.lexeme.lexeme | limitTo: titleLimit }}
             <br />
-            <img  src="{{quickbar.lexeme.symbol.image}}"
+            <img ng-src="{{quickbar.lexeme.symbol.image}}"
               ng-if="quickbar.lexeme.symbol.image"
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme2);">
-            {{ quickbar.lexeme2.lexeme | charLimit: titleLimit }}
-            <br />
-            <img src="{{quickbar.lexeme2.symbol.image}}"
+          <div class="regulars"
+               ng-click="hideRegular(quickbar.lexeme2.pk);"
+               ng-class="{'item-dark': quickbar.lexeme2.hidden}">
+
+              <span class="fa fa-eye item-eye" aria-hidden="true"
+                  ng-class="{'eye-red': !quickbar.lexeme2.hidden, 'eye-green': quickbar.lexeme2.hidden}">
+              </span>
+
+              {{ quickbar.lexeme2.lexeme | limitTo: titleLimit }}
+              <br />
+              <img ng-src="{{quickbar.lexeme2.symbol.image}}"
               ng-if="quickbar.lexeme2.symbol.image"
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme3);">
-            {{ quickbar.lexeme3.lexeme | charLimit: titleLimit }}
-            <br />
-            <img src = "{{quickbar.lexeme3.symbol.image}}"
-              ng-if="quickbar.lexeme3.symbol.image"
-              style="width:40px;height:40px">
+          <div class="regulars"
+               ng-click="hideRegular(quickbar.lexeme3.pk);"
+               ng-class="{'item-dark': quickbar.lexeme3.hidden}">
+
+               <span class="fa fa-eye item-eye" aria-hidden="true"
+                  ng-class="{'eye-red': !quickbar.lexeme3.hidden, 'eye-green': quickbar.lexeme3.hidden}">
+               </span>
+
+              {{ quickbar.lexeme3.lexeme | limitTo: titleLimit }}
+              <br />
+              <img ng-src = "{{quickbar.lexeme3.symbol.image}}"
+                ng-if="quickbar.lexeme3.symbol.image"
+                style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme4);">
-            {{ quickbar.lexeme4.lexeme | charLimit: titleLimit }}
-            <img src="{{quickbar.lexeme4.symbol.image}}"
-              ng-if="quickbar.lexeme4.symbol.image"
-              style="width:40px;height:40px">
+          <div class="regulars"
+               ng-click="hideRegular(quickbar.lexeme4.pk);"
+               ng-class="{'item-dark': quickbar.lexeme4.hidden}">
+
+               <span class="fa fa-eye item-eye" aria-hidden="true"
+                  ng-class="{'eye-red': !quickbar.lexeme4.hidden, 'eye-green': quickbar.lexeme4.hidden}">
+               </span>
+
+               {{ quickbar.lexeme4.lexeme | limitTo: titleLimit }}
+
+               <img ng-src="{{quickbar.lexeme4.symbol.image}}"
+                ng-if="quickbar.lexeme4.symbol.image"
+                style="width:40px;height:40px">
           </div>
         </div>
+
+      </div>
 
         <div class="col col-90" id="full-body">
           <div class="word-builder">
@@ -99,7 +187,7 @@
                   style="width:40px;height:40px">
               </div>
               <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
-              <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="width:15%;float:right;margin-top:5px;display:block;margin-right:-24%" ng-show="activeChat && !callEvent"/>		
+              <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="width:15%;float:right;margin-top:5px;display:block;margin-right:-24%" ng-show="activeChat && !callEvent"/>
               <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="width:14%;float:right;margin-top:-15px;display:block;margin-right:-23%" ng-show="activeChat && callEvent"/>
             </div>
           </div>
@@ -107,27 +195,72 @@
           <div class="col col-60" id="tile-section">
             <div class="tile-section-border">
               <span ng-repeat="row in rows">
+
                 <div class="tile" ng-repeat="col in columns"
                   ng-click="clickTile(board.symbols[col+row]);"
-                  ng-class="{ lightBlue: board.symbols[col+row]==selectedIndex, lightYellow: board.symbols[col+row].word_class.indexOf('pronoun') > -1 }";>
-                  <span ng-show="filled_tiles.indexOf(col+row)!=-1">
-                    <p ng-bind="board.symbols[col+row].label? (board.symbols[col+row].label | charLimit: titleLimit) : (board.symbols[col+row].word | charLimit: titleLimit)"
-                      class="tile-words"></p>
-                    <img ng-if="board.symbols[col+row].symbol.image" src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
+                  ng-class="{ lightBlue: board.symbols[col+row]==selectedIndex, lightYellow: board.symbols[col+row].word_class.indexOf('pronoun') > -1 };"
+                  ng-if="selectedBtn2">
+                  <span ng-show="filled_tiles.indexOf(col+row)!=-1"
+                        ng-click="clickTile(board.symbols[col+row]); sayWord();">
+                    <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}</p>
+                    <img ng-if="board.symbols[col+row].symbol.image" ng-src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
                   </span>
                 </div>
+
+                <div class="tile"
+                  ng-class="{'item-dark': board.symbols[col+row].hidden}"
+                  ng-repeat="col in columns"
+                  ng-click="hideItem(col, row);"
+                  ng-if="!selectedBtn2">
+                    <span ng-show="filled_tiles.symbols.indexOf(col+row)!=-1">
+                      <span class="fa fa-eye item-eye" aria-hidden="true"
+                        ng-show="!selectedBtn2"
+                        ng-class="{'eye-red': !board.symbols[col+row].hidden, 'eye-green': board.symbols[col+row].hidden}">
+                      </span>
+
+                      <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}</p>
+                      <img ng-if="board.symbols[col+row].symbol.image" ng-src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
+                    </span>
+                </div>
+
               </span>
             </div>
           </div>
 
           <div class="col col-40" id="board-section">
-              <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="chosenBoard($index);">
-                <p style="position:fixed; z-index:3; margin-left:15px;" ng-model="titleLimit">{{userBoard.board.title | charLimit: titleLimit}}</p>
+            <div class="boards"
+            ng-if="selectedBtn2"
+            ng-repeat="userBoard in userBoards | sliceArr:start:end"
+            ng-class="{'hide-tile': userBoard.board.hidden}">
 
-                <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-50px;"\>
+            <div ng-click="chosenBoard($index); sayWord()"
+                 ng-if="!userBoard.board.hidden">
 
-                <!--<img src="img/new_dev_assets/board_tile_notched_default_1.svg" class="board-tile" style="positon:relative; z-index:0;" alt="board tile">-->
+              <p style="position:fixed; z-index:3; margin-left:15px;" ng-model="titleLimit">{{userBoard.board.title | limitTo: titleLimit}} <span ng-show="boardObj.board.name.length > titleLimit">...</span></p>
+
+              <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-50px;"\>
             </div>
+
+          </div>
+
+          <div class="boards"
+            ng-repeat="userBoard in userBoards | sliceArr:start:end"
+            ng-click="hideUserBoard(userBoard.board.pk);"
+            ng-class="{'item-dark': userBoard.board.hidden}"
+            ng-if="!selectedBtn2">
+
+            <span class="fa fa-eye item-eye" aria-hidden="true"
+              ng-class="{'eye-red': !userBoard.board.hidden, 'eye-green': userBoard.board.hidden}">
+            </span>
+
+            <p style="position:fixed; z-index:3; margin-left:15px;" ng-model="titleLimit">
+              {{userBoard.board.title | limitTo: titleLimit}}
+              <span ng-show="boardObj.board.name.length > titleLimit">...</span>
+            </p>
+
+            <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-50px;"\>
+
+          </div>
           </div>
         </div>
     </div>
@@ -139,7 +272,7 @@
             <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
           </div>
         </div>
-        
+
         <div class="col col-60">
           <div class="button-circle pull-left"
            on-double-tap="handlerTap('bell');"
