--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -256,7 +256,7 @@
 				</ion-list>
 
 				<div class="settings-box">
-						<button ng-click="downloadBoard()">Download</button>
+						<button class="custom-button button-block" ng-click="downloadBoard()">Download</button>
 				</div>
 			</div>
 
