--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -21,7 +21,7 @@
       <span class="hide-label" ng-show="selectedBtn2 == true">Hide Tiles</span>
       <span class="hide-label2" ng-show="selectedBtn2 == false">Hide Tiles</span>
 
-      <div class="toggle-content" style="float:right">
+      <div class="toggle-content pull-left">
         <label class="toggle toggle-dark-green toggle-small" ng-if="hide">
           <input type="checkbox">
           <div class="track" id="track-color">
@@ -59,31 +59,27 @@
             {{ quickbar.lexeme.lexeme | charLimit: titleLimit }}
             <br />
             <img  src="{{quickbar.lexeme.symbol.image}}"
-              ng-if="quickbar.lexeme.symbol.image"
-              style="width:40px;height:40px">
+              ng-if="quickbar.lexeme.symbol.image">
           </div>
 
           <div class="regulars" ng-click="chosenTile(quickbar.lexeme2);">
             {{ quickbar.lexeme2.lexeme | charLimit: titleLimit }}
             <br />
             <img src="{{quickbar.lexeme2.symbol.image}}"
-              ng-if="quickbar.lexeme2.symbol.image"
-              style="width:40px;height:40px">
+              ng-if="quickbar.lexeme2.symbol.image">
           </div>
 
           <div class="regulars" ng-click="chosenTile(quickbar.lexeme3);">
             {{ quickbar.lexeme3.lexeme | charLimit: titleLimit }}
             <br />
             <img src = "{{quickbar.lexeme3.symbol.image}}"
-              ng-if="quickbar.lexeme3.symbol.image"
-              style="width:40px;height:40px">
+              ng-if="quickbar.lexeme3.symbol.image">
           </div>
 
           <div class="regulars" ng-click="chosenTile(quickbar.lexeme4);">
             {{ quickbar.lexeme4.lexeme | charLimit: titleLimit }}
             <img src="{{quickbar.lexeme4.symbol.image}}"
-              ng-if="quickbar.lexeme4.symbol.image"
-              style="width:40px;height:40px">
+              ng-if="quickbar.lexeme4.symbol.image">
           </div>
         </div>
 
@@ -95,8 +91,7 @@
                 <p ng-bind="symbol.label? (symbol.label | charLimit: titleLimit) : (symbol.word | charLimit: titleLimit)"
                 class="tile-words"></p>
                 <img src = "{{symbol.symbol.image}}"
-                  ng-if="symbol.symbol.image"
-                  style="width:40px;height:40px">
+                  ng-if="symbol.symbol.image">
               </div>
               <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
               <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="width:15%;float:right;margin-top:5px;display:block;margin-right:-24%" ng-show="activeChat && !callEvent"/>		
@@ -113,7 +108,7 @@
                   <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                     <p ng-bind="board.symbols[col+row].label? (board.symbols[col+row].label | charLimit: titleLimit) : (board.symbols[col+row].word | charLimit: titleLimit)"
                       class="tile-words"></p>
-                    <img ng-if="board.symbols[col+row].symbol.image" src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
+                    <img ng-if="board.symbols[col+row].symbol.image" src="{{board.symbols[col+row].symbol.image}}">
                   </span>
                 </div>
               </span>
@@ -122,9 +117,9 @@
 
           <div class="col col-40" id="board-section">
               <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="chosenBoard($index);">
-                <p style="position:fixed; z-index:3; margin-left:15px;" ng-model="titleLimit">{{userBoard.board.title | charLimit: titleLimit}}</p>
+                <p class="tile-words" ng-model="titleLimit">{{userBoard.board.title | charLimit: titleLimit}}</p>
 
-                <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-50px;"\>
+                <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" \>
 
                 <!--<img src="img/new_dev_assets/board_tile_notched_default_1.svg" class="board-tile" style="positon:relative; z-index:0;" alt="board tile">-->
             </div>
