--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -856,7 +856,7 @@ input[type="text"]:focus, textarea:focus{
   border-color:$white!important;
 }
 
-.tile.lightBlue{
+.tile.activated{
   background-color: $speak-agent-light-blue!important;
   border-color: $white!important;
 }
