--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -86,8 +86,7 @@
         <div class="col col-90" id="full-body">
           <div class="word-builder">
             <div class="word-builder-input" style="margin-left:-15px">
-              <div class="tile" ng-repeat="symbol in selectedTiles"
-                ng-click="clickTile(board.symbols[col+row]);">
+              <div class="tile" ng-repeat="symbol in selectedTiles">
                 <p ng-bind="symbol.label? (symbol.label | charLimit: titleLimit) : (symbol.word | charLimit: titleLimit)"
                 class="tile-words"></p>
                 <img src = "{{symbol.symbol.image}}"
@@ -116,12 +115,9 @@
           </div>
 
           <div class="col col-40" id="board-section">
-              <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="chosenBoard($index);">
+              <div class="boards" ng-class="{ 'activated-board': selectedBoardIndex == userBoard.board.pk }" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="chosenBoard($index);">
                 <p class="tile-words" ng-model="titleLimit">{{userBoard.board.title | charLimit: titleLimit}}</p>
-
                 <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" \>
-
-                <!--<img src="img/new_dev_assets/board_tile_notched_default_1.svg" class="board-tile" style="positon:relative; z-index:0;" alt="board tile">-->
             </div>
           </div>
         </div>
@@ -130,7 +126,7 @@
       <!-- Bottom function buttons -->
       <div class="row" id="btn-section">
         <div class="col col-10" id="home-button-section">
-          <div class="button-circle no-mrg" ng-click="homeButton()">
+          <div class="button-circle no-mrg" ng-class="{ 'home-activated': homeBoard.board.pk == selectedBoardIndex }" ng-click="homeButton()">
             <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
           </div>
         </div>
@@ -139,7 +135,8 @@
           <div class="button-circle pull-left"
            on-double-tap="handlerTap('bell');"
            ng-class="{'inactive': buttons.bell}"
-           ng-click="bellSound()" >
+           ng-click="bellSound()" 
+           ng-dblclick="return false">
             <img src="img/new_dev_assets/bell.png" style="margin-left:17px; margin-top:14px;"/>
           </div>
 
