--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -142,8 +142,8 @@
         </div>
 
         <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="width:15%;float:right;margin-top:5px;display:block;margin-right:-24%" ng-show="activeChat && !callEvent"/>
-        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="width:14%;float:right;margin-top:-15px;display:block;margin-right:-23%" ng-show="activeChat && callEvent"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="float:right;margin-top:-17px;margin-right:-33%" ng-show="activeChat && !callEvent"/>
+        <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="float:right;margin-top:-17px;margin-right:-24%" ng-show="activeChat && callEvent"/>
       </div>
     </div>
 
