--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -61,12 +61,12 @@
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item> -->
 
-					<ion-item ng-click="panel(6)" class="panels" ng-class="{active: 6 == step}">
+					<!-- <ion-item ng-click="panel(6)" class="panels" ng-class="{active: 6 == step}">
 						<div class="avatar-icon-placeholder">
 							<img src="img/AAC_assets/icon-aboutme.png" />
 						</div>About Me Profile
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
-					</ion-item>
+					</ion-item> -->
 				</ion-list>
 
 				<ion-list>
@@ -294,16 +294,16 @@
 			</div>
 
 <!-- About Me Panel -->
-			<div class="col col-67" id="settings-modal" ng-show="step == 6">
+			<!-- <div class="col col-67" id="settings-modal" ng-show="step == 6">
 				<ion-list>
 					<ion-item style="margin-left:5px;margin-top:-6px;width:900px;">
-						<!-- <p style="float:left; font-size:.9em; color:#088788;"><i class="icon ion-chevron-left"></i> General</p> -->
+						 <p style="float:left; font-size:.9em; color:#088788;"><i class="icon ion-chevron-left"></i> General</p>
 						<h1 class="centered-title"><strong>About Me Profile</strong></h1>
 					</ion-item>
 				</ion-list>
 				<div ng-include src="'templates/message.html'"></div>
 
-				<!-- <div class="settings-content"> -->
+				 <div class="settings-content">
 				<div class="settings-box">
 					About Me Profile
 				</div>
@@ -319,7 +319,7 @@
 
 						<img src="img/new_dev_assets/board_tile_notched_default.svg" alt="board tile" style="float:left; positon:relative; z-index:0;">
 
-						<!-- <p style="position:relative; z-index:3; margin-top:-60px">About Me</p> -->
+						 <p style="position:relative; z-index:3; margin-top:-60px">About Me</p>
 
 						<p class="board-instructions2" style="float:left; width:60%; margin-left:30px;">Replace About Me Board symbol</p>
 
@@ -327,7 +327,7 @@
 							<input type="file" ng-model="file" custom-on-change="uploadFile" accept=".png,.jpg,.gif">
 						</p>
 
-						<!--<button class="done-button" style="float:left; margin-top:20px; margin-left:30px;"><p><i class="icon ion-ios-search"></i> Browse...</p></button>-->
+						button class="done-button" style="float:left; margin-top:20px; margin-left:30px;"><p><i class="icon ion-ios-search"></i> Browse...</p></button>
 					</div>
 					<p class="about-content" style="float:left">Nickname
 						<span class="annotation">For example, "Sam"</span>
@@ -387,8 +387,8 @@
 						<button class="custom-button" style="margin-top:20px;" type="submit" ng-disabled="message">Save</button>
 					</p>
 				</form>
-				<!-- </div> -->
-			</div>
+				 </div>
+			</div> -->
 		</div>
 	</ion-content>
 </ion-view>
