--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -199,9 +199,9 @@
             <img src="img/new_dev_assets/colors.png" style="margin-left:15px; margin-top:14px;"/>
           </div>
 
-          <div class="button-circle" on-double-tap="handlerTap('avatar');" ng-click="buttonAvatar();" ng-class="{'yellow': activeAvatar, 'inactive': buttons.avatar}">
+          <!-- <div class="button-circle" on-double-tap="handlerTap('avatar');" ng-click="buttonAvatar();" ng-class="{'yellow': activeAvatar, 'inactive': buttons.avatar}">
             <img src="img/new_dev_assets/avatar.png" style="margin-left:15px; margin-top:14px;" />
-          </div>
+          </div> -->
 
           <div class="button-circle" on-double-tap="handlerTap('chat');" ng-click="buttonChat();" ng-class="{'yellow': activeChat, 'inactive': buttons.chat}">
             <img src="img/new_dev_assets/chat.png" style="margin-left:15px; margin-top:14px;" />
