--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -79,17 +79,18 @@ a#btn-styling.button.button-outline.button-small {
 
 .boards {
   padding: .5%;
-  height: 70px;
+  height: 72px;
   width: 70px;
   font-size: .75em;
   margin: 4.5px;
   float: left;
   text-align: center;
-  background: url("../img/new_dev_assets/board_tile_notched_default_1.svg"); }
+  background: url("../img/new_dev_assets/board_tile_default.svg");
+}
 
 .boards.activated,
 .activated-board {
-  background: url("../img/new_dev_assets/board_tile_notched_default_yellow.svg") !important; }
+  background: url("../img/new_dev_assets/board_tile_current.svg"); }
 
 .boards a {
   color: #000000;
@@ -669,8 +670,8 @@ input[type="text"]:focus, textarea:focus {
   border-color: #ffffff !important; }
 
 .tile.activated {
-  background-color: #83EFF0 !important;
-  border-color: #ffffff !important; }
+  /*background-color: #83EFF0 !important;*/
+  border: 4px solid #ffffff !important; }
 
 .tile.lightYellow {
   background-color: #FFEFAD;
@@ -685,10 +686,10 @@ input[type="text"]:focus, textarea:focus {
   float: left;
   text-align: center;
   overflow: hidden;
-  background: url("../img/new_dev_assets/board_tile_notched_default_1.svg") no-repeat; }
+}
 
 .boards.activated {
-  background: url("../img/new_dev_assets/board_tile_notched_default_yellow.svg") no-repeat; }
+  background: url("../img/new_dev_assets/board_tile_tapped.svg") no-repeat;}
 
 .boards img {
   width: 65%;
