--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -120,22 +120,6 @@ a#btn-styling.button.button-outline.button-small{
   font-weight: bold;
 } 
 
-.boards{
-  padding:.5%;
-  height: 70px;
-  width: 70px;
-  font-size: .75em;
-  margin: 4.5px;
-  float: left;
-  text-align: center;
-  background: url('../img/new_dev_assets/board_tile_notched_default_1.svg');
-}
-
-.boards.activated,
-.activated-board {
-  background: url('../img/new_dev_assets/board_tile_notched_default_yellow.svg')!important;
-}
-
 .boards a{
   color: $black;
   text-decoration: none;
@@ -271,15 +255,6 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
   border-color: $speak-agent-light-blue5;
 }
 
-#button-circle{
-  width:75px;
-  height:75px;
-  background-color: #008485;
-  border-radius: 37.5px;
-  float:left;
-  margin-left:20px;
-}
-
 .button-circle{
   width:75px;
   height:75px;
@@ -287,6 +262,7 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
   border-radius: 37.5px;
   float:left;
   margin-left:20px;
+  padding-top: 14px;
 }
 
 .button-circle2{
@@ -300,15 +276,12 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2{
 .button-circle.activated,
 .home-activated {
   border: 5px solid #F8D338;
-  width: 80px;
-  height: 80px;
+  padding-top: 10px;
 }
 
 .yellow{
   border: 5px solid #F8D338;
-  width: 80px;
-  height:80px;
-  border-radius:40px;
+  padding-top: 10px;
 }
 
 .buttonsdiv{
@@ -876,10 +849,11 @@ input[type="text"]:focus, textarea:focus{
   float: left;
   text-align: center;
   overflow: hidden;
-  background: url("../img/new_dev_assets/board_tile_notched_default_1.svg") no-repeat; }
+  background: url("../img/new_dev_assets/board_tile_default.svg") no-repeat; }
 
-.boards.activated {
-  background: url("../img/new_dev_assets/board_tile_notched_default_yellow.svg") no-repeat; }
+.boards:active,
+.activated-board {
+ background: url("../img/new_dev_assets/board_tile_current.svg") no-repeat; }
 
 .boards img{
     width: 65%;
