--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -645,11 +645,10 @@ input[type="text"]:focus, textarea:focus {
   border-color: #ffffff !important; }
 
 .tile.activated {
-  background-color: #83EFF0 !important;
-  border-color: #ffffff !important; }
+  border: 4px solid #ffffff !important; }
 
 .tile.lightYellow {
-  background-color: #FFEFAD;
+  /*background-color: $speak-agent-light-yellow;*/
   border-color: #979797; }
 
 .boards {
@@ -663,7 +662,9 @@ input[type="text"]:focus, textarea:focus {
   overflow: hidden;
   background: url("../img/new_dev_assets/board_tile_default.svg") no-repeat; }
 
-.boards:active,
+.boards.activated {
+  background: url("../img/new_dev_assets/board_tile_tapped.svg") no-repeat; }
+
 .activated-board {
   background: url("../img/new_dev_assets/board_tile_current.svg") no-repeat; }
 
@@ -744,7 +745,7 @@ input[type="text"]:focus, textarea:focus {
   margin: 10px; }
 
 .word-builder-input {
-  width: 800px;
+  width: 730px;
   height: 80px;
   border-radius: 10px;
   background-color: #ffffff;
