--- a/aac-ionic/www/templates/login.html
+++ b/aac-ionic/www/templates/login.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/login.css">
+<link rel="stylesheet" href="css/login.min.css">
 
 <ion-view>
 	<ion-content class="padding login-background">
